--- a/CRIOLLOPABLO_EXAMANE_PGR1/Views/Shared/_Layout.cshtml
+++ b/CRIOLLOPABLO_EXAMANE_PGR1/Views/Shared/_Layout.cshtml
@@ -25,6 +25,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Celular" asp-action="Index">Celular</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="PCriollo" asp-action="Index">PCriollo</a>
+                        </li>
                     </ul>
                 </div>
             </div>
